--- a/local-volumes.yaml
+++ b/local-volumes.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: "pv-volume"
+  labels:
+    type: local
 spec:
   capacity:
     storage: "5Gi"
@@ -9,3 +11,4 @@ spec:
     - "ReadWriteOnce"
   hostPath:
     path: /tmp/data01
+  persistentVolumeReclaimPolicy: Recycle
