Fix for Issue#3 https://kubernetes.io/docs/concepts/storage/volumes/#hostpath

--- a/local-volumes.yaml
+++ b/local-volumes.yaml
@@ -11,4 +11,5 @@ spec:
     - "ReadWriteOnce"
   hostPath:
     path: /tmp/data01
+    type: DirectoryOrCreate
   persistentVolumeReclaimPolicy: Recycle
