Fix for Issue #3

--- a/local-volumes.yaml
+++ b/local-volumes.yaml
@@ -10,6 +10,5 @@ spec:
   accessModes:
     - "ReadWriteOnce"
   hostPath:
-    path: /tmp/data01
-    type: DirectoryOrCreate
+    path: /tmp
   persistentVolumeReclaimPolicy: Recycle
